--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.37.3",
+    "binance-api-node": "^0.12.4",
+    "dayjs": "^1.11.7",
     "nodemon": "^2.0.22",
     "os-utils": "^0.0.14",
     "parcel-bundler": "^1.12.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
