--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.3",
     "binance-api-node": "^0.12.4",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "nodemon": "^2.0.22",
     "os-utils": "^0.0.14",
