--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "binance-api-node": "^0.12.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "os-utils": "^0.0.14",
     "parcel-bundler": "^1.12.5",
